--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".testRecycler"></activity>
+        <activity android:name=".OghatSharei">
+
+        </activity>
+        <activity android:name=".testRecycler" />
         <activity android:name=".testDrawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
